--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yuliia Shevchenko-Kotenko</title>
+    <meta
+      name="description"
+      content="My private portfolio with the liks of my projects"
+    />
+    <title>Yuliia Shevchenko-Kotenko Profile Website</title>
+
     <link rel="stylesheet" href="scr/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
